--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <a-entity id="camera" camera look-controls wasd-controls="acceleration:100"></a-entity>
             </a-entity>
 
-            <a-sky src="4982191871_9b7d9a95de_o"><a-sky>
+            <a-sky src="4982191871_9b7d9a95de_o.jpg"><a-sky>
         </a-scene>
     </body>
 </html>
